--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"],
-			"@components/*": ["./components/*"]
+			"@components/*": ["./components/*"],
+			"@hooks/*": ["./hooks/*"],
+			"@core/*": ["./core/*"],
+			"@public/*": ["./public/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
