--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "csvtojson": "^2.0.10",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
