--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "csvtojson": "^2.0.10",
-    "eslint": "8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "fs": "^0.0.1-security",
     "next": "13.4.4",
@@ -31,6 +31,12 @@
   },
   "devDependencies": {
     "@types/csvtojson": "^2.0.0",
-    "csv-loader": "^3.0.5"
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "csv-loader": "^3.0.5",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "lefthook": "^1.4.1",
+    "prettier": "^2.8.8"
   }
 }
