--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix --ext .jsx --ext .tsx --ext .ts --ext .js --ext .test.js ./"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -33,9 +34,15 @@
     "@types/csvtojson": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.26.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-unused-imports": "2.0.0",
     "csv-loader": "^3.0.5",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
     "lefthook": "^1.4.1",
     "prettier": "^2.8.8"
   }
