--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
     "@types/csvtojson": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "csv-loader": "^3.0.5",
+    "cypress": "^12.14.0",
     "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "csv-loader": "^3.0.5",
-    "eslint-config-prettier": "^8.8.0",
     "lefthook": "^1.4.1",
     "prettier": "^2.8.8"
   }
