--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "10.4.14",
     "csvtojson": "^2.0.10",
     "eslint": "^8.42.0",
@@ -26,6 +27,8 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
