--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "csvtojson": "^2.0.10",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.16",
     "fs": "^0.0.1-security",
     "next": "13.4.4",
     "next-themes": "^0.2.1",
@@ -28,6 +29,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
