--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.12.16",
     "fs": "^0.0.1-security",
     "next": "13.4.4",
+    "next-intl": "3.0.0-beta.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
