--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
       "@public/*": ["./public/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "generateFontFace.js"],
   "exclude": ["node_modules"]
 }
