--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.4",
+    "@rive-app/react-canvas": "^3.0.54",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -33,6 +34,7 @@
     "react-slick": "^0.29.0",
     "react-toggle-dark-mode": "^1.1.1",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
