--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate-ff": "node ./scripts/generateFontFace.js"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^9.4.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.4",
@@ -26,6 +27,7 @@
     "jszip": "^3.10.1",
     "next": "^13.4.9",
     "next-intl": "3.0.0-beta.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
