--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hotjar": "^6.1.0",
     "react-slick": "^0.29.0",
