--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hotjar": "^6.1.0",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.5.2",
     "react-toggle-dark-mode": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
