--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-slick": "^0.23.10",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
