--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hotjar": "^6.1.0",
+    "react-html-parser": "^2.0.2",
+    "react-quill": "^2.0.0",
+    "react-rnd": "^10.4.1",
     "react-slick": "^0.29.0",
     "react-textarea-autosize": "^8.5.2",
     "react-toggle-dark-mode": "^1.1.1",
@@ -44,6 +47,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-html-parser": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "cypress": "^12.14.0",
