--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./components/*"],
+      "@context/*": ["./context/*"],
       "@hooks/*": ["./hooks/*"],
       "@core/*": ["./core/*"],
       "@public/*": ["./public/*"]
