--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-slick": "^0.23.10",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "canvas": "2.10.2",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
