--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hotjar": "^6.1.0",
+    "react-query": "^3.39.3",
     "react-slick": "^0.29.0",
     "react-toggle-dark-mode": "^1.1.1",
     "slick-carousel": "^1.8.1",
